--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "backend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -53,5 +53,5 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.2"
   },
-  "homepage": "https://purushottam-indu.github.io/teams_CHAT"
+  "homepage": "https://purushottam-indu.github.io/sid"
 }
